<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical"
    tools:context=".MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:text="@string/report_card"
       android:textAlignment="center"
       android:textSize="30dp"
       android:textStyle="bold"
       android:textColor="@color/colorRed" />


</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ExtraText"
    android:orientation="horizontal"
    android:layout_margin="10dp">
<TextView
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:text="@string/student_name"
    android:textStyle="bold"
    android:textColor="@color/colorWhite"
    />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:text=""
        android:textColor="@color/colorBlack"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Class"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Section"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roll_number"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/subject_and_marks"
            android:textAlignment="center"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:textColor="@color/colorYellow" />
        </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="ExtraText"
    android:orientation="horizontal"
    android:layout_margin="10dp">
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/english"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:text=""
        android:textColor="@color/colorBlack"
        />
    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/urdu"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:layout_marginLeft="10dp"
        />
    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorWhite"
        android:text=""
        android:textColor="@color/colorBlack"
        />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Islamyat"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pak_study"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/science"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/math"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="ExtraText"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/geograpy"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/computer"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:layout_marginLeft="10dp"
            />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:text=""
            android:textColor="@color/colorBlack"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/colorWhite"
        android:textColor="@color/colorRed"
        android:textSize="22dp"
        android:textStyle="bold"
        android:textAlignment="center"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@color/colorWhite"
            android:textColor="@color/colorRed"
            android:textSize="22dp"
            android:textStyle="bold"
            android:textAlignment="center"
            />

    </LinearLayout>
</LinearLayout>